    invoking user. (LP: #146464)
  * apport/crashdb_impl/memory.py: Implement mark_retraced(),
    get_unretraced(), and get_dup_unchecked() for completeness, and define
    _MemoryCrashDBTest also when not running file as __main__. This makes the
    class useful for higher-level test suites. Add test cases for the new
    functions.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 26 Oct 2007 16:54:29 -0400

apport (0.98) gutsy; urgency=low

  [ Martin Pitt ]
  * debian/local/setup-apport-retracer: launchpadBugs -> launchpadbugs
    (recently renamed Python package in python-launchpad-bugs).
  * apport/crashdb_impl/launchpad.py, test examples: Do not duplicate to bug
    #1, that generates a huge amount of spam. Use another test bug.
  * apport/crashdb_impl/launchpad.py, download(): Use Bug.description_raw,
    since LP mangles spaces in .description. Bump p-lp-bugs dependency.
  * apport/crashdb_impl/launchpad.py, close_duplicate(): Explicitly set the
    duplicate after removing attachments, since the new LP does not allow any
    modification of duplicate bugs.
  * bin/crash-digger: Only consolidate the duplicate DB when -i is given (i.
    e. usually only on one running instance).

  [ Colin Watson ]
  * Use bugs.launchpad.net for +filebug and +bugs requests. (LP: #138090)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 01 Oct 2007 14:35:07 +0200

apport (0.97) gutsy; urgency=low

  [Martin Pitt]
  * problem_report.py: Coerce CompressedValue.__len__() to return an int to
    work on Python 2.4, too.
  * debian/local/setup-apport-retracer: Adapt ddeb apt source for the move
    from ~pitti to ~ubuntu-archive.

  [Markus Korn]
  * port to new python-launchpad-bugs API.

  [Daniel Holbach]
  * small fixes to the port.
  * debian/control: bumped python-launchpad-bugs Depends to >= 0.2.2.

 -- Daniel Holbach <daniel.holbach@ubuntu.com>  Tue, 04 Sep 2007 11:24:28 +0200

apport (0.96) gutsy; urgency=low
